--- a/Zalagaonica/Zalagaonica.csproj
+++ b/Zalagaonica/Zalagaonica.csproj
@@ -56,6 +56,12 @@
     <Compile Include="DodavanjeArtikala.Designer.cs">
       <DependentUpon>DodavanjeArtikala.cs</DependentUpon>
     </Compile>
+    <Compile Include="DodavanjeZaposlenog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodavanjeZaposlenog.Designer.cs">
+      <DependentUpon>DodavanjeZaposlenog.cs</DependentUpon>
+    </Compile>
     <Compile Include="DomanModel\UgovorClass.cs" />
     <Compile Include="DodavanjeZalagaca.cs">
       <SubType>Form</SubType>
