--- a/Zalagaonica/Zalagaonica.csproj
+++ b/Zalagaonica/Zalagaonica.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DodavanjeZaposlenog.Designer.cs">
       <DependentUpon>DodavanjeZaposlenog.cs</DependentUpon>
     </Compile>
+    <Compile Include="DomanModel\RadnjaClass.cs" />
     <Compile Include="DomanModel\UgovorClass.cs" />
     <Compile Include="DodavanjeZalagaca.cs">
       <SubType>Form</SubType>
@@ -84,7 +85,9 @@
     <Compile Include="DodavanjeZalagaca.Designer.cs">
       <DependentUpon>DodavanjeZalagaca.cs</DependentUpon>
     </Compile>
+    <Compile Include="DomanModel\ZalagacClass.cs" />
     <Compile Include="DomanModel\ZalogClass.cs" />
+    <Compile Include="DomanModel\ZaposleniClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ugovor.cs">
