--- a/Zalagaonica/Zalagaonica.csproj
+++ b/Zalagaonica/Zalagaonica.csproj
@@ -108,6 +108,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="TrenutniKorisnik.cs" />
     <Compile Include="Ugovor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,8 +127,11 @@
     <EmbeddedResource Include="DodavanjeZaposlenog.resx">
       <DependentUpon>DodavanjeZaposlenog.cs</DependentUpon>
     </EmbeddedResource>
+	<EmbeddedResource Include="GlavnaRadnik.resx">
+      <DependentUpon>GlavnaRadnik.cs</DependentUpon>
+	</EmbeddedResource>
     <EmbeddedResource Include="GlavnaVlasnik.resx">
-      <DependentUpon>GlavnaVlasnik.cs</DependentUpon>
+      <DependentUpon>GlavnaVlasnik.cs</DependentUpon>  
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
